Fix toolbar alignment w/ empty toolbars

--- a/ui/appui-react/src/appui-react/layout/widget/NavigationArea.scss
+++ b/ui/appui-react/src/appui-react/layout/widget/NavigationArea.scss
@@ -5,31 +5,53 @@
 @use "./tools/button/variables" as *;
 @use "../widgetopacity" as *;
 
-.nz-widget-navigationArea {
+@layer appui.component {
   $gap: 6px;
 
-  transition: visibility var(--iui-duration-2) ease,
-    opacity var(--iui-duration-2) ease;
-  display: grid;
-  box-sizing: border-box;
-  height: 100%;
-  grid-gap: $gap;
-  grid-template-areas:
-    "htools button"
-    ". vtools"
-    "secondary-htools vtools";
-  grid-template-columns: 1fr auto;
-  grid-template-rows: auto 1fr auto;
-  justify-items: end;
-  min-height: 0;
+  .nz-widget-navigationArea {
+    transition: visibility var(--iui-duration-2) ease,
+      opacity var(--iui-duration-2) ease;
+    display: grid;
+    box-sizing: border-box;
+    height: 100%;
+    grid-gap: $gap;
+    grid-template-columns: [horizontal-start] 1fr [horizontal-end aid-start] auto [aid-end];
+    grid-template-rows: [aid-start] auto [aid-end vertical-start] 1fr [vertical-end secondary-start] auto [secondary-end];
+    justify-items: end;
+    min-height: 0;
+    grid-column: 2;
 
-  &.nz-hidden {
-    opacity: 0;
-    visibility: hidden;
+    &.nz-hidden {
+      opacity: 0;
+      visibility: hidden;
+    }
+
+    &:not(
+        :has(.nz-widget-navigationArea_verticalContainer .uifw-start button)
+      ) {
+      .nz-widget-navigationArea_horizontalContainer {
+        grid-column-end: aid-end;
+      }
+
+      .nz-widget-navigationArea_verticalContainer {
+        grid-row-start: aid-end;
+      }
+    }
+
+    &:not(:has(.nz-widget-navigationArea_verticalContainer .uifw-end button)) {
+      .nz-widget-navigationArea_secondaryContainer {
+        grid-column-end: aid-end;
+      }
+
+      .nz-widget-navigationArea_verticalContainer {
+        grid-row-end: vertical-end;
+      }
+    }
   }
 
-  > .nz-horizontal-toolbar-container {
-    grid-area: htools;
+  .nz-widget-navigationArea_horizontalContainer {
+    grid-column: horizontal;
+    grid-row: aid;
 
     width: 100%;
     display: flex;
@@ -41,27 +63,18 @@
     @include nz-widget-opacity;
 
     &.nz-navigation-aid {
-      grid-column: htools / button;
+      grid-column-end: aid-end;
     }
 
     > .components-toolbar-overflow-sizer {
       display: flex;
       justify-content: flex-end;
     }
-
-    > .nz-navigation-aid-container {
-      min-width: $mls-navigation-aid-width;
-      min-height: $mls-navigation-aid-height;
-
-      margin-bottom: 6px;
-      pointer-events: auto;
-      flex-shrink: 0;
-    }
   }
 
-  > .nz-vertical-toolbar-container {
-    grid-column: vtools;
-    grid-row: button / vtools;
+  .nz-widget-navigationArea_verticalContainer {
+    grid-column: aid;
+    grid-row: aid-start / secondary-end;
 
     display: inline-flex;
     flex-direction: column;
@@ -71,16 +84,26 @@
     @include nz-widget-opacity;
 
     &.nz-navigation-aid {
-      grid-row: vtools;
+      grid-row-start: aid-end;
     }
   }
 
-  > .nz-secondary-horizontal-toolbar-container {
-    grid-area: secondary-htools;
+  .nz-widget-navigationArea_secondaryContainer {
+    grid-column: horizontal;
+    grid-row: secondary;
 
     width: 100%;
     min-width: 0;
 
     @include nz-widget-opacity;
+  }
+
+  .nz-widget-navigationArea_navigationAid {
+    min-width: $mls-navigation-aid-width;
+    min-height: $mls-navigation-aid-height;
+
+    margin-bottom: $gap;
+    pointer-events: auto;
+    flex-shrink: 0;
   }
 }
